Bugfixing whitespace bottom

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -91,7 +91,7 @@ input[type="radio"] {
 }
 
 #app {
-  height: calc(100vh + 100px);
+  // height: calc(100vh + 100px);
 }
 
 .wrapper {
